[project]
name = "fastapi-easy-responses"
version = "0.0.1.4"
description = "A simple package to easily handle and document all HTTP exceptions and other errors in a FastAPI app."
readme = "README.md"
authors = [
    { name = "Bod Zol", email = "5642056+bod-zol@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.126.0,<0.200.0",
]

[project.urls]
Homepage = "https://github.com/bod-zol/fastapi-easy-responses"
Repository = "https://github.com/bod-zol/fastapi-easy-responses"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "FAST", # fastapi
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP", # pyupgrade
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
